# flowgen

./: .gitignore  .gitlab-ci.yml  .gitmodules  CLAUDE.md  Cargo.toml  sample_data.csv
.github/workflows/: build.yml  test-build-push.yml
components/flowgen/src/: service.rs
components/salesforce/: Cargo.toml  build.rs
components/salesforce/src/: auth.rs  pubsub.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  event.rs  input.rs  lib.rs  message.rs  recordbatch.rs
crates/deltalake/: Cargo.toml
crates/deltalake/src/: client.rs  config.rs  event.rs  lib.rs  writer.rs
crates/file/: Cargo.toml
crates/file/src/: config.rs  lib.rs  publisher.rs  reader.rs  subscriber.rs  writer.rs
crates/flowgen/: Cargo.toml
crates/generate/: Cargo.toml
crates/generate/src/: subscriber.rs
crates/http/: Cargo.toml
crates/http/src/: config.rs  processor.rs
crates/nats/: Cargo.toml
crates/nats/src/: cache.rs
crates/object-store/src/: client.rs  writer.rs
crates/salesforce/: Cargo.toml
crates/salesforce/src/: lib.rs
examples/: Cargo.toml
examples/src/google/storage/: main.rs
examples/src/salesforce/pubsub/: main.rs
flowgen/: Cargo.toml  build.rs
flowgen-worker/core/src/: buffer.rs  event.rs  lib.rs
flowgen-worker/http/src/: processor.rs  request.rs  server.rs  webhook.rs
flowgen-worker/nats/src/: cache.rs  client.rs
flowgen-worker/object-store/src/: client.rs  config.rs  lib.rs  reader.rs  writer.rs
flowgen/src/: config.rs  flow.rs  lib.rs  main.rs
flowgen/src/salesforce/: auth.rs  eventbus.v1.rs
scripts/: build.sh
(+30 files in other folders)
