[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "google-cloud-storage"
path = "src/google/storage/main.rs"

[[bin]]
name = "salesforce-pubsub"
path = "src/salesforce/pubsub/main.rs"

[dependencies]
serde_avro_fast = "1.1.2"
oauth2 = "4.4.2"
flowgen = { path = "../../flowgen/flowgen" }
prost = "0.12.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
tonic = { version = "0.10.2", features = ["tls"] }
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1.5.0"
futures-util = "0.3.30"
tokio-stream = "0.1.14"
tokio-util = "0.7.10"
futures = "0.3.30"
gcp_auth = "0.12.2"
